<LinearLayout

    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background= "@drawable/appbackground">

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize = "80dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:text = "@string/title"/>
    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize = "25dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        android:text = "@string/initialquestion"/>

    <Button
        android:id= "@+id/movie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize = "25dp"
        android:text="@string/movie"/>

    <Button
        android:id= "@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize = "25dp"
        android:text="@string/show"/>
    </LinearLayout>